--- a/_posts/2019-04-27-why.md
+++ b/_posts/2019-04-27-why.md
@@ -1,20 +1,50 @@
 ---
-title: Why Jekyll with GitBook
-author: Tao He
-date: 2019-04-27
+title: Why Flowith with Knowledge Garden
+author: MindReset
+date: 2025-09-03
 category: Jekyll
 layout: post
 ---
 
-GitBook is an amazing frontend style to present and organize contents (such as book chapters
-and blogs) on Web. The typical to deploy GitBook at [Github Pages][1]
-is building HTML files locally and then push to Github repository, usually to the `gh-pages`
-branch. However, it's quite annoying to repeat such workload and make it hard for people do
-version control via git for when there are generated HTML files to be staged in and out.
+**1. 为什么要使用Flowith?** 
 
-This theme takes style definition out of generated GitBook site and provided the template
-for Jekyll to rendering markdown documents to HTML, thus the whole site can be deployed
-to [Github Pages][1] without generating and uploading HTML bundle every time when there are
-changes to the original repository.
+​		只要大家是一个知识工作者，大家肯定遇到过如下问题：
 
-[1]: https://pages.github.com
+​		笔记，论文，书籍等等资料实在太多，有的纸质版，有的电子版，有的还是在app或是网页上浏览获取的内容。当你想下笔的时候，好像有很多想法但总是有点理不清，好像在哪里看过却又总是找不到。当你某天下定决心，早上六点半起床，下定决心，吭哧吭哧，从头开始，翻遍了你的纸质书，翻遍了你的文件夹，每一份每一份地读下来，哇塞，终于找到了你之前想找的某篇文章的某个段落，开始跟AI工具进行单线程协同工作的时候！！！————
+
+​		好的，收拾收拾准备洗洗睡了（不好意思，开个玩笑，但这写个论文要写到什么时候！）
+
+---
+
+​		现如今大家都知道要用AI工具来提升我们的工作效率，选择如云，为什么要用Flowith平台呢？
+
+​		相较于传统的聊天式AI工具，Flowith是在一个二维画布上进行交互的，这样我们就可以同时开启跟多个AI模型的对话，而不是只跟某一个AI聊天工具等着它输出结果，大大提升我们的创作效率。
+
+​		在Flowith平台上，集成了现有的很先进的LLM模型——
+
+- GPT系列 (GPT4.1/GPT4.1 mini/GPT 5 nano/GPT mini)
+- DeepSeek系列 (DeepSeek V3.1/DeepSeek R1)
+- GPT系列 (GPT OSS 120B/20B/GPT 5/5 chat)
+- OpenAI系列 (o3 / o3 pro/ o3 mini)
+- Claude系列(Sonnet 3.7/4   /Opus 4/4.1)
+- GLM4.5, Gemini 2.5 (Flash/Pro), Grok(3 mini/4)   
+
+> 援引自官网[flowith.io][1]的回答：
+>
+> Flowith is the next-generation AI creation tool. Unlike traditional chat-based AI tools, Flowith's interaction is based on a two-dimensional canvas that allows you to simultaneously interact with multiple AI models within a single workspace, enabling content generation that significantly boosts efficiency and facilitates entering a flow state during the creative process.
+
+​		
+
+
+
+**2. 为什么说Flowith的知识库/知识花园是我们的科研利器？**
+
+​		我们首先要搞清楚一个问题，就是虽然现在很多的LLM模型虽然功能已经很强大，但是要想让它们去解决你的专业领域的小众问题还是有点"无能为力"的，因为它们是通用模型，本身训练他们的语料库是很庞杂的，大概率上是无法涵盖各种小众领域细分行业的专业资料和知识的。所以将你的专业问题直接抛给这些大模型回答，或是你希望借助这些大模型来辅助你生产出尽可能专业的论文资料的时候，它们做不到，只能给个"泛泛的" 解决方案。
+
+​		所以我们一定需要Flowith平台上**知识库/知识花园**的辅助！
+
+> Flowith's **Knowledge Garden** is designed to let you interact with AI using your own knowledge. It automatically organizes, manages, and helps you create with your information. The system breaks down your files, notes, and online resources into small pieces of information called Seeds. Using AI, Flowith connects these Seeds to create a dynamic web of knowledge. When you chat with the AI, it automatically uses the relevant information from your Knowledge Garden, making its responses more accurate and tailored to your needs.
+
+​		Flowith平台上有很多个**知识库**构成了其**知识花园**。通过把专业的资料库补充进去知识库，让AI去自动理解提炼里面的精华生成相应的知识单元，自动转化为小块信息，也就是**种子**"Seed"。同时它也学习了这些顶尖素材的文风和写作逻辑，这些专业素材本身能够迁移LLM模型的语言风格，从而让AI的回答能够更符合你所需要的那些专业领域的逻辑深度和行文风格。当你在Flowith平台进行提问的时候，它会自动从你选择的知识库中使用相关的信息，也就是连接相关的种子给你构造出动态的知识网页，帮你梳理清楚脉络，给出适应你需要的专业回答，而不是通用式AI给出的那种"泛泛的"回答（这不就相当于一个专家教授在旁边亲手给你1V1指导嘛！！！）。
+
+[1]:https://doc.flowith.io/
